Fixed Jobs overflowing

--- a/frontend/app/src/components/JobsGrid/style.module.scss
+++ b/frontend/app/src/components/JobsGrid/style.module.scss
@@ -13,7 +13,7 @@
     margin: 0 auto;
     padding: 1.5rem;
     align-items: center;
-    @include bp-custom(700px) {
+    @include bp-custom(800px) {
         flex-direction: row;
         align-items: initial;
     }
@@ -26,8 +26,6 @@
             width: 200px;
             height: 200px;
             object-fit: contain;
-            width: 100%;
-            height: 100%;
         }
     }
 }
@@ -39,7 +37,7 @@
         color: black;
     }
     align-items: center;
-    @include bp-custom(700px) {
+    @include bp-custom(800px) {
         width: 50%;
         align-items: initial;
     }
@@ -50,7 +48,7 @@
     * {
         text-align: center;
     }
-    @include bp-custom(700px) {
+    @include bp-custom(800px) {
         padding-left: 3rem;
         align-items: initial;
         * {
@@ -60,12 +58,17 @@
 }
 
 .jobDescription {
+    width: 90%;
+    max-width: 600px;
     color: $black;
     * {
         color: $black;
         text-align: left;
     }
 
+    code {
+        font-size: 15px;
+    }
     a {
         color: $link-colour;
     }
@@ -150,9 +153,7 @@
         }
     }
 }
-.description {
-    color: black;
-}
+
 .readmore {
     margin-top: auto;
     margin-bottom: 1rem;
